<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".registracija">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/TitleRegistration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView"
                android:textSize="38dp"
                android:layout_marginBottom="55dp"
                android:layout_marginTop="55dp"
                android:layout_gravity="center"
                android:textColor="@color/NeznaRdeca"
                tools:fontFamily="@font/telex"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text=""
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="12dp"
                android:ems="10"
                android:singleLine="false"
                android:textAlignment="gravity"
                android:drawableLeft="@drawable/svincnik"
                android:autofillHints=""
                android:drawableStart="@drawable/svincnik"
                android:drawablePadding="20dp"
                android:hint="@string/LoginName"
                tools:fontFamily="@font/telex"
                android:id="@+id/editText"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText2"
                android:textAlignment="gravity"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="12dp"
                android:drawableLeft="@drawable/kljucavnica"
                android:autofillHints=""
                android:drawableStart="@drawable/kljucavnica"
                android:drawablePadding="20dp"
                android:hint="@string/LoginPassword"
                tools:fontFamily="@font/telex"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText3"
                android:textAlignment="gravity"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="25dp"
                android:drawableLeft="@drawable/kljucavnica"
                android:autofillHints=""
                android:drawableStart="@drawable/kljucavnica"
                android:drawablePadding="20dp"
                android:hint="@string/AgainLoginPassword"
                tools:fontFamily="@font/telex"/>
        <Button
                android:id="@+id/GumbRegistracija"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="50dp"
                android:text="@string/LoginRegistration"
                android:textAllCaps="false"

                android:background="@drawable/gumbi_login_animacija"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:textColor="#ffffff"
                android:textSize="20sp"
                tools:fontFamily="@font/telex"

        />
        <ProgressBar
                android:id="@+id/indeterminateBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
        />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>